# llyy-EdgeLLM-Cpp-Inference

./: CMakeLists.txt  Makefile  README.md  前后端配置信息.docx  编译启动说明.docx
llama.cpp/: Makefile  cmake_install.cmake  final-server.cpp  llama-config.cmake  llama-version.cmake
llama.cpp/common/: Makefile  cmake_install.cmake
llama.cpp/ggml/: Makefile  cmake_install.cmake
llama.cpp/ggml/src/: Makefile  cmake_install.cmake
llama.cpp/ggml/src/ggml-amx/: Makefile  cmake_install.cmake
llama.cpp/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
llama.cpp/src/: Makefile  cmake_install.cmake
llyy.cpp/common/: sampling.cpp
vue/: .env  .env.development  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
vue/src/: App.vue  config.js  router.js
vue/src/components/: MetricsView.vue
vue/src/stores/: chat.js
vue/src/views/: ChatView.vue
